<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/widgetOpenAppButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/widget_open_app" />

    <Button
        android:id="@+id/widgetSite1Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/widget_open_last_site" />

    <Button
        android:id="@+id/widgetSite2Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/widget_open_last_site" />

    <Button
        android:id="@+id/widgetSite3Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/widget_open_last_site" />

    <Button
        android:id="@+id/widgetSite4Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/widget_open_last_site" />

</LinearLayout>
